--- a/mycelium/apps/hi/templates/hi/hi.html
+++ b/mycelium/apps/hi/templates/hi/hi.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block head %}{{block.super}}
+<link rel="stylesheet" href="{{ MEDIA_URL }}css/hi.css" type="text/css" media="screen" title="" charset="utf-8">
 <script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/contrib/jquery.scrollTo-min.js"> </script>
 <script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/contrib/jquery.toggleval.js"> </script>
 <script type="text/javascript" charset="utf-8">
