test badge, message that search doesn't work.

--- a/media/css/people.css
+++ b/media/css/people.css
@@ -310,3 +310,11 @@ input:focus {
 	font-size: 14px;
 	padding: 4px 8px;
 }
+.nyi {
+	display: none;
+	color: #777;
+	text-align: center;
+}
+.nyi img {
+	vertical-align: middle;
+}
