report app added, detail page HTML stub in

--- a/mycelium/templates/mycelium_base.html
+++ b/mycelium/templates/mycelium_base.html
@@ -19,7 +19,7 @@
 	<div id="main_nav">{% spaceless %}
 		<a href="{% url people:search %}" class="current">People</a>
 		<a href="#">Fund{# Multiply #}</a>
-		<a href="#">Measure{# Yardstick #}</a>
+		<a href="#">Reports{# Yardstick #}</a>
 		<a href="#">Communicate{# Soapbox #}</a>
 		<a href="#">Events{# Shindig #}</a>
 	{% endspaceless %}</div>
