--- a/mycelium/apps/reports/templates/reports/search.html
+++ b/mycelium/apps/reports/templates/reports/search.html
@@ -21,16 +21,19 @@
 		<tr>
 			<td><a href="{% url reports:report_detail 1 %}" >Thursday Volunteer List</a></td>
 			<td>53 people</td>
+			<td><a href="#" class="mycelium_btn myelium_small_btn">View Results</a></td>
 			<td><a href="#" class="mycelium_btn myelium_small_btn">Download CSV</a></td>
 		</tr>
 		<tr>
 			<td><a href="{% url reports:report_detail 1 %}" >2010 Monthly Donors</a></td>
 			<td>162 people</td>
+			<td><a href="#" class="mycelium_btn myelium_small_btn">View Results</a></td>
 			<td><a href="#" class="mycelium_btn myelium_small_btn">Download CSV</a></td>
 		</tr>
 		<tr>
 			<td><a href="{% url reports:report_detail 1 %}" >Active Email Subscriptions</a></td>
 			<td>1,354 people</td>
+			<td><a href="#" class="mycelium_btn myelium_small_btn">View Results</a></td>
 			<td><a href="#" class="mycelium_btn myelium_small_btn">Download CSV</a></td>
 		</tr>		
 	</table>
