much better buttons for reports

--- a/mycelium/apps/reports/templates/reports/detail.html
+++ b/mycelium/apps/reports/templates/reports/detail.html
@@ -7,9 +7,7 @@
 {% endblock %}
 {% block page_content %}
 <div class="right_actions">
-	<a href="#" class="mycelium_btn">View All Results</a>
-	<a href="#" class="mycelium_btn">Download CSV</a>
-
+	<a href="#" class="mycelium_btn">Save Report</a>
 </div>
 <div class="title"><img src="{{MEDIA_URL}}images/report-32.png"/>Unsaved Report</div>
 
@@ -96,7 +94,9 @@
 </table>
 </div>
 <div class="actions">
-	<a href="#" class="mycelium_btn">Save Report</a>
+	<a href="#" class="mycelium_btn">View Results</a>
+	<a href="#" class="mycelium_btn">Download CSV</a>
+
 </div>
 
 {% endblock %}
