--- a/media/css/marketing_site.css
+++ b/media/css/marketing_site.css
@@ -2,6 +2,54 @@ body {
 	background: url("../images/marketing-background.png");	
 	background-repeat: repeat-x;
 }
+
+#main_nav {
+	display: block;
+	position: absolute;	
+	top: 0px;
+	right: 4%;
+	width: auto;
+	height: 40px;
+	background: #FFF;
+	padding: 0px 4px;
+	border-bottom-left-radius: 4px;
+	-moz-border-radius-bottomleft: 4px;
+	-webkit-border-bottom-left-radius: 4px;	
+	border-bottom-right-radius: 4px;
+	-moz-border-radius-bottomright: 4px;
+	-webkit-border-bottom-right-radius: 4px;	
+
+    overflow: hidden;
+}
+#main_nav a {
+	text-decoration: none;
+	border-right: 1px solid #EEE;
+	border-bottom: 4px solid #BBB;
+	border-top-width: 0px;
+	font-size: 23px;
+	padding: 6px 20px 4px 20px;
+	margin: 0px;
+	display: block;
+	float: left;
+
+}
+#main_nav a.first {
+/*	border-left: 1px solid #EEE;	*/
+/*	border-bottom-left-radius: 4px;
+	-moz-border-radius-bottomleft: 4px;
+	-webkit-border-bottom-left-radius: 4px;	
+*/}
+#main_nav a.last {
+	border-right: 0px solid #EEE;		
+/*	border-bottom-left-radius: 4px;
+	-moz-border-radius-bottomleft: 4px;
+	-webkit-border-bottom-left-radius: 4px;	*/
+}
+#main_nav a.current {
+	border-bottom: 4px solid #3E9CFD;
+}
+
+
 #logo {
 	display: block;
 	position: absolute;	
@@ -9,8 +57,8 @@ body {
 	left: 10px;
 	font-size: 50px;
 	color: #FFF;
-	text-shadow:		 1px 1px 1px #00497A;
-	-moz-text-shadow:    1px 1px 1px #00497A;
+	text-shadow:		 1px 1px 1px #0054A4;
+	-moz-text-shadow:    1px 1px 1px #0054A4;
 
 	height: 70px;
 	
@@ -31,7 +79,7 @@ body {
 	width: 40%;
 	text-align: left;
 	float: left;
-	margin: 190px 10px 0px 30px;
+	margin: 190px 10px 0px 4%;
 
 }
 #goodcloud_hearts_nonprofits .goodcloud {
@@ -146,7 +194,7 @@ input {
 	padding-top: 120px;
 	font-family: 'ExpresswayRegular', Arial, sans-serif;
 	width: 50%;
-	margin-right: 4%;
+	margin-right: 5%;
 	float: right;
 }
 
@@ -155,4 +203,25 @@ input {
 	margin-top: 0px;
 	color: #454545;
 	font-size: 25px;
+}
+
+#page_content {
+	padding: 100px 10%;
+	font-size: 20px;
+	color: #333;
+}
+#page_content h1, #page_content h2 {
+	font-weight: normal;
+}
+#page_content h1 {
+	margin-bottom: 30px;
+	text-align: center;
+	color: #000;	
+}
+#page_content h2 {
+	margin-bottom: 0px;
+	color: #004486;
+}
+#page_content p {
+	margin-top: 0px;
 }
