--- a/mycelium/apps/marketing_site/templates/marketing_site/home.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/home.html
@@ -1,8 +1,6 @@
-{% extends "base.html" %}
+{% extends "marketing_site/base.html" %}
+{% load i18n cache cms_tags menu_tags %}
 {% block head %}{{block.super}}
-<link rel="stylesheet" href="{{ MEDIA_URL }}css/marketing_site.css" type="text/css" media="screen" title="" charset="utf-8">
-<script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/contrib/jquery.scrollTo-min.js"> </script>
-<script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/contrib/jquery.toggleval.js"> </script>
 <script type="text/javascript" charset="utf-8">
 $(function(){
 	{% if posted %}
@@ -40,21 +38,7 @@ function rotate_verbs() {
 
 </script>
 {% endblock %}
-{% block content %}
-{% block nav %}
-<div id="logo">
-	GoodCloud
-</div>
-<div id="main_nav">{% spaceless %}
-	<a href="#" {% if not section %}class="current"{% endif %}>Home</a>
-	<a href="#" >Mission</a>
-	<a href="#" >About Us</a>
-	<a href="#" >Blog</a>
-	<a href="#" >Contact</a>
-{% endspaceless %}</div>
-{% endblock %}
-
-
+{% block page_content %}
 <div id="goodcloud_hearts_nonprofits">
 	<div class="goodcloud">We 
 		<span class="verbs">
@@ -69,16 +53,8 @@ function rotate_verbs() {
 </div>
 
 <div id="home_right_content">
-	<p>Welcome to GoodCloud.</p>
-	<p>We make great software exclusively for non-profits.</p>
-	
-	<div class="more_info">
-	
-	<p>We're in active development on our first product, collaborating with a handful of amazing non-profits.
-		
-	<p>You can find out more at <a href="{% url blog_home %}">Our Blog</a>, or by signing up for our mailing list below. Thanks for stopping by!</p></div>
-	
-	<p>
+	{% placeholder home_content %}
+
 	{% if posted and save_success %}
 		<div class="thanks_message">Thanks! We'll keep you posted!</div>
 	{% else %}
@@ -88,6 +64,5 @@ function rotate_verbs() {
 	</form>
 	<div class="email_terms">We hate spam, too. We'll only use your email to notify you of updates.</div>
 	{% endif %}
-</div>
 </div>
 {% endblock %}
