--- a/mycelium/apps/marketing_site/templates/marketing_site/about_us.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/about_us.html
@@ -11,7 +11,7 @@
 {% for e in all_employees %}
 <div class="employee">
 	<div class="picture_frame"
-		<div class="picture">{% thumbnail e.picture "149x149" as t %}<img src="{{t.url}}"/>{% empty %}{% endthumbnail %}</div>
+		<div class="picture" {% thumbnail e.picture "149x149" as t %}style="background-image:url('{{MEDIA_URL}}..{{t.url}}');"{% empty %}{% endthumbnail %}></div>
 	</div>
 	<div class="bio">
 		<div class="name">{{e.full_name}}</div>
