--- a/mycelium/apps/marketing_site/templates/marketing_site/home.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/home.html
@@ -40,8 +40,7 @@ function rotate_verbs() {
 {% endblock %}
 {% block page_content %}
 <div id="goodcloud_hearts_nonprofits">
-	<div class="goodcloud">We 
-		<span class="verbs">
+	<div class="goodcloud"><span class="we">We</span><span class="verbs">
 		<span class="verb verb_1 heart">&hearts;</span>
 		<span class="verb verb_2 get">get</span>
 		<span class="verb verb_3 serve">serve</span>
