--- a/media/css/marketing_site.css
+++ b/media/css/marketing_site.css
@@ -278,7 +278,7 @@ input {
 	left: 25%;
 	margin-left: -4px;
 	width: 80%;
-	padding: 20px;
+	padding: 7px 20px 10px 20px;
 	background-color: #FFF;
 	border-radius: 12px;
 	-moz-border-radius: 12px;
