added OWA tracker

--- a/mycelium/templates/base.html
+++ b/mycelium/templates/base.html
@@ -20,6 +20,7 @@
 
 	{% endblock %}
 {% if ENV == "LIVE" %}{% analytics %}{% endif %}
+{% include "owa/_analytics.html" %}
 </body>
 {% endblock %}
 </html>
