--- a/mycelium/apps/marketing_site/templates/marketing_site/base.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/base.html
@@ -3,10 +3,12 @@
 <link rel="stylesheet" href="{{ MEDIA_URL }}css/marketing_site.css" type="text/css" media="screen" title="" charset="utf-8">
 <script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/contrib/jquery.scrollTo-min.js"> </script>
 <script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/contrib/jquery.toggleval.js"> </script>
+<script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/mycelium/marketing_site.js"> </script>
 
 {% endblock %}
 {% block content %}
 	{% include "marketing_site/_top_nav.html" %}
 	{% block page_content %}
 	{% endblock %}
+	{% include "marketing_site/_footer.html" %}	
 {% endblock %}
