--- a/mycelium/apps/marketing_site/templates/marketing_site/about_us.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/about_us.html
@@ -10,7 +10,7 @@
 <div class="employees">
 {% for e in all_employees %}
 <div class="employee">
-	<div class="picture_frame"
+	<div class="picture_frame">
 		<div class="picture" {% thumbnail e.picture "149x149" as t %}style="background-image:url('{{t.url}}');"{% empty %}{% endthumbnail %}></div>
 	</div>
 	<div class="bio">
