--- a/mycelium/apps/marketing_site/templates/marketing_site/base.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/base.html
@@ -4,6 +4,9 @@
 <script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/contrib/jquery.scrollTo-min.js"> </script>
 <script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/contrib/jquery.toggleval.js"> </script>
 <script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/mycelium/marketing_site.js"> </script>
+<!--[if lt IE 8]>
+<link rel="stylesheet" href="{{ MEDIA_URL }}css/ie7_marketing_site.css" type="text/css" media="screen" title="" charset="utf-8">
+<![endif]-->
 
 {% endblock %}
 {% block content %}
